--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,12 @@
 
     <!-- Theme CSS -->
     <link href="{{ url_for('static', filename='css/freelancer.min.css') }}" rel="stylesheet">
-
+    <link href="{{ url_for('static', filename='css/main.css') }}">
+    <style>
+    .navbar span {
+        font-weight: lighter;
+    }
+    </style>
 </head>
 
 <body id="page-top">
@@ -27,7 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Paddy Boyle | Photography</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Paddy Boyle | <span>Photography</span></a>
             <button
                 class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
