--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600,700&display=swap" rel="stylesheet">
 
     <!-- Theme CSS -->
     <link href="{{ url_for('static', filename='css/freelancer.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/main.css') }}">
-    <style>
-    .navbar span {
-        font-weight: lighter;
-    }
-    </style>
+    <!--<link href="{{ url_for('static', filename='css/main.css') }}">-->
+
 </head>
 
 <body id="page-top">
@@ -32,7 +29,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Paddy Boyle | <span>Photography</span></a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Paddy Boyle |
+                <span>Photography</span></a>
             <button
                 class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -60,6 +58,59 @@
     </nav>
 
     {% block content %}{% endblock %}
+
+    <!-- Footer -->
+    <footer class="footer text-center">
+        <div class="container">
+            <div class="row">
+
+                <!-- Footer Location -->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="location text-uppercase mb-4">Location</h4>
+                    <p class="lead mb-0">21 Dudley Road, Hastings, East Sussex, TN35 5JP</p>
+                </div>
+
+                <!-- Footer Social Icons -->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="location text-uppercase mb-4">Around the Web</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/paddy.boyle.1614">
+                        <i class="fab fa-fw fa-facebook-f"></i>
+                    </a>
+
+                    <a class="btn btn-outline-light btn-social mx-1"
+                        href="https://www.linkedin.com/in/pboylephotography/">
+                        <i class="fab fa-fw fa-linkedin-in"></i>
+                    </a>
+
+                </div>
+
+                <!-- Footer About Text -->
+                <div class="col-lg-4">
+                    <h4 class="location text-uppercase mb-4">Contact</h4>
+                    <p class="lead mb-0">01424 444039
+                        <br>
+                        07963110227
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <!-- Copyright Section -->
+    <section class="copyright py-4 text-center text-white">
+        <div class="container">
+            <small>Copyright &copy; www.pboylephotography.com 2019</small>
+        </div>
+    </section>
+
+    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)
+        -->
+    <div class="scroll-to-top d-lg-none position-fixed ">
+        <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
+            <i class="fa fa-chevron-up"></i>
+        </a>
+    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
