--- a/templates/architecture.html
+++ b/templates/architecture.html
@@ -17,6 +17,9 @@
 
     </div>
 </section>
+{% for photo in paddy_photodb %}
+   
+
 <div class="container-001">
     <!-- About Section Content -->
 
@@ -24,11 +27,11 @@
 
         <figure class="col-md-4">
             <div id="wrapper-002">
-                <a href="static/img/portfolio/architecture/lutyenshouse,london/003lytchens__.jpg" class="hover">
+            <a href="{{ photo.url}}" class="hover">
 
-                    <img alt="picture" src="static/img/portfolio/architecture/lutyenshouse,london/003lytchens__.jpg"
+                    <img alt="picture" src="{{ photo.url }}"
                         class="img-fluid"></a><br><br>
-                <p class="text-002 lead">Architecture</p>
+                <p class="text-002 lead">{{photo.name}}</p>
 
             </div>
         </figure>
@@ -115,7 +118,8 @@
 
     </div>
 
-    </section>
+  
+    {% endfor %}
 
 </div>
 
