--- a/templates/index.html
+++ b/templates/index.html
@@ -173,7 +173,7 @@
 
                                                         <img
                                                             alt="picture"
-                                                            src="{url_for('file', filename='/file/385ba5bc58055785d9ec6438080c872f.jpg')}"
+                                                            src="static/img/portfolio/catagories/catagorya.jpg"
                                                             class="img-fluid"></a>
                                                         <p class="text">Architecture</p>
 
