--- a/templates/architecture.html
+++ b/templates/architecture.html
@@ -17,7 +17,7 @@
 
     </div>
 </section>
-{% for photo in paddy_photodb %}
+{% for photos in paddy_photodb %}
    
 
 <div class="container-001">
@@ -27,22 +27,23 @@
 
         <figure class="col-md-4">
             <div id="wrapper-002">
-            <a href="{{ photo.url}}" class="hover">
+            <a href="{{ photos.url}}" class="hover">
 
-                    <img alt="picture" src="{{ photo.url }}"
+                    <img alt="picture" src="{{ photos.url }}"
                         class="img-fluid"></a><br><br>
-                <p class="text-002 lead">{{photo.name}}</p>
+                <p class="text-002 lead">{{photos.name}}</p>
 
             </div>
         </figure>
 
         <figure class="col-md-4">
             <div id="wrapper-002">
-                <a href="" class="hover">
+            <a href="{{ photos.url}}" class="hover">
 
-                    <img alt="picture" src="static/img/portfolio/architecture/hawthorns/002hawthorns__.jpg"
+                    <img alt="picture" src="{{ photos.url }}"
                         class="img-fluid"></a><br><br>
-                <p class="text-002 lead">Commercial</p>
+                <p class="text-002 lead">{{photos.name}}</p>
+
             </div>
         </figure>
 
