--- a/templates/lutyens-house.html
+++ b/templates/lutyens-house.html
@@ -5,7 +5,7 @@
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Architecture</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">St Pauls Church</h2>
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -24,15 +24,15 @@
     <!-- About Section Content -->
 
     <div class="row">
-    {% for photos in paddy_photodb %}
+{% for st_pauls_curch in paddy_photodb %}
         <figure class="col-md-4">
             <div id="wrapper-002"> 
             
-            <a href="{{ photos.link }}" class="hover">
+            <a href="{{st_pauls_curch.url}}" class="hover">
           
-                    <img alt="picture" src="{{ photos.url }}"
+                    <img alt="picture" src="{{ st_pauls_curch.url }}"
                         class="img-fluid"></a><br><br>
-                <p class="text-002 lead">{{photos.name}}</p>
+                <p class="text-002 lead">{{ st_pauls_curch.name }}</p>
             </div>
             
         </figure>
