Added all commercial galleries and linked images from MongoDB.

--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
                                         {% for catagory_photos in paddy_photodb %}
                                             <figure class="col-md-3">
                                                 <div id="wrapper">
-                                                    <a href="/architecture" class="hover">
+                                                    <a href="{{ catagory_photos.link }}" class="hover">
 
                                                         <img
                                                             alt="picture"
