--- a/templates/copyhold-barn.html
+++ b/templates/copyhold-barn.html
@@ -5,7 +5,7 @@
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">St Pauls Church</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Copyhold Barn</h2>
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
