--- a/templates/fox.html
+++ b/templates/fox.html
@@ -1,11 +1,11 @@
 {% extends 'base-002.html' %}
 {% block content %}
 
-<section class="page-section about" id="architecture">
+<section class="page-section about" id="commercial">
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Hamstone House</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Fox Linton Interiors</h2>
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -21,17 +21,17 @@
     <!-- About Section Content -->
 
     <div class="row">
-{% for hamstone_house in paddy_photodb %}
+{% for fox in paddy_photodb %}
         <figure class="col-md-4">
             <div id="wrapper-002"> 
             
-            <a href="{{ hamstone_house.url }}" width=400 class="hover"
+            <a href="{{ fox.url }}" width=400 class="hover"
           data-responsive="true"
           data-lightbox="mygallery"
-          data-title="{{ hamstone_house.name }}">
-                    <img alt="picture" src="{{ hamstone_house.url }}"
+          data-title="{{ fox.name }}">
+                    <img alt="picture" src="{{ fox.url }}"
                         class="img-fluid"></a><br><br>
-                <p class="text-002 lead">{{ hamstone_house.name }}</p>
+                <p class="text-002 lead">{{ fox.name }}</p>
             </div>
             
         </figure>
