--- a/templates/marina.html
+++ b/templates/marina.html
@@ -5,17 +5,14 @@
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Architecture</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Marina</h2>
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
-            <div class="">
-                <i class=""></i>
-            </div>
-            <div class=""></div>
+           
         </div>
+        
 
-    </div>
 </section>
 
    
@@ -24,15 +21,17 @@
     <!-- About Section Content -->
 
     <div class="row">
-{% for photos in paddy_photodb %}
+{% for marina in paddy_photodb %}
         <figure class="col-md-4">
             <div id="wrapper-002"> 
             
-            <a href="{{ photos.url }}" class="hover">
-          
-                    <img alt="picture" src="{{ photos.url }}"
+            <a href="{{ marina.url }}" width=400 class="hover"
+          data-responsive="true"
+          data-lightbox="mygallery"
+          data-title="{{ marina.name }}">
+                    <img alt="picture" src="{{ marina.url }}"
                         class="img-fluid"></a><br><br>
-                <p class="text-002 lead">{{photos.name}}</p>
+                <p class="text-002 lead">{{ marina.name }}</p>
             </div>
             
         </figure>
