Added all galleries and all images from DB.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,13 @@
         </ol>
         <!--/.Indicators-->
         <!--Slides-->
+        
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
                 <div class="view">
                     <img
                         class="d-block w-100"
-                        src="static/img/portfolio/architecture/copyholdbarn,eastsussex/002copyhold__.jpg"
+                        src="static/img/002copyhold__.jpg"
                         alt="First slide">
                         <div class="mask rgba-black-light"></div>
                     </div>
@@ -33,7 +34,7 @@
                     <div class="view">
                         <img
                             class="d-block w-100"
-                            src="static/img/portfolio/architecture/hastingscollege/008hastingscol__.jpg"
+                            src="static/img/008hastingscol__.jpg"
                             alt="Second slide">
                             <div class="mask rgba-black-light"></div>
                         </div>
@@ -45,7 +46,7 @@
                         <div class="view">
                             <img
                                 class="d-block w-100"
-                                src="static/img/portfolio/architecture/somersethouse,london/009somersethouse_.jpg"
+                                src="static/img/002entrance_.jpg"
                                 alt="Third slide">
                                 <div class="mask rgba-black-light"></div>
                             </div>
@@ -58,7 +59,7 @@
                             <div class="view">
                                 <img
                                     class="d-block w-100"
-                                    src="static/img/portfolio/commercial/VariousCommercial/004_.jpg"
+                                    src="static/img/004_.jpg"
                                     alt="Third slide">
                                     <div class="mask rgba-black-light"></div>
                                 </div>
@@ -71,7 +72,7 @@
                                 <div class="view">
                                     <img
                                         class="d-block w-100"
-                                        src="static/img/portfolio/commercial/woodbasedjoiners/002woodbase_.jpg"
+                                        src="static/img/002sunlounge_.jpg"
                                         alt="Third slide">
                                         <div class="mask rgba-black-light"></div>
                                     </div>
