--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -26,7 +26,29 @@
     <!-- Ginger2 Syntax template for Flask-->
   </head>
   <body>
-    {%block body%} {%endblock%}
+    {%block body%} 
+    
+    <div class="content">
+  <h1>To Do List</h1>
+
+  <table>
+    <tr>
+      <th>Task</th>
+      <th>Added</th>
+      <th>Actions</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td>
+        <a href="">Delete</a>
+        <br />
+        <a href="">Update</a>
+      </td>
+    </tr>
+  </table>
+</div>
+    {%endblock%}
     <!-- Ginger2 Syntax template for Flask-->
 
 
