Finished CRUD opertations in testimonial.html.

--- a/templates/ash.html
+++ b/templates/ash.html
@@ -12,9 +12,7 @@
             
            
         </div>
-        <div class="button">
-                <a href="/testimonials"> Add a testimonial
-            </div>
+        
         
 
 </section>
@@ -23,7 +21,7 @@
 
 <div class="container-001">
     <!-- About Section Content -->
-
+    <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;"><a href="/testimonials"> Add a testimonial</h2><br>
     <div class="row">
 {% for ash in paddy_photodb %}
 
