Added link to testimonial page. Site ready for deployment to Heroku.

--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -107,13 +107,11 @@ p {
 
 abbr[title],
 abbr[data-original-title] {
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
+  
+  
   cursor: help;
   border-bottom: 0;
-  -webkit-text-decoration-skip-ink: none;
-  text-decoration-skip-ink: none;
+
 }
 
 address {
@@ -182,7 +180,7 @@ a {
 
 a:hover {
   color: #117964;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:not([href]):not([tabindex]) {
@@ -11171,4 +11169,8 @@ td {
 
 #content {
     width: 70%;
+}
+
+.text-dec {
+    text-decoration: none;
 }
