--- a/templates/lutyens-house.html
+++ b/templates/lutyens-house.html
@@ -17,7 +17,7 @@
    
 
 <div class="container-001">
-    <!-- About Section Content -->
+    <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;"><a href="/testimonials"> Add a testimonial</h2><br>
 
     <div class="row">
 {% for lutyens_house in paddy_photodb %}
