--- a/templates/ash.html
+++ b/templates/ash.html
@@ -5,7 +5,8 @@
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">St Pauls Church</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0 text-dec">Ashburnham Road</h2>
+       
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
