--- a/templates/hastings-college.html
+++ b/templates/hastings-college.html
@@ -18,7 +18,7 @@
    
 
 <div class="container-001">
-    <!-- About Section Content -->
+    <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;"><a href="/testimonials"> Add a testimonial</h2><br>
 
     <div class="row">
 {% for hastings_college in paddy_photodb %}
