--- a/templates/pages.html
+++ b/templates/pages.html
@@ -5,7 +5,7 @@
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Markwich Terrace</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Pages Lane</h2>
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -18,7 +18,7 @@
    
 
 <div class="container-001">
-    <!-- About Section Content -->
+    <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;"><a href="/testimonials"> Add a testimonial</h2><br>
 
     <div class="row">
 {% for pages in paddy_photodb %}
