Fixed contact form.

--- a/templates/beachaven.html
+++ b/templates/beachaven.html
@@ -18,7 +18,7 @@
    
 
 <div class="container-001">
-    
+    <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;"><a href="/testimonials"> Add a testimonial</h2><br>
     <div class="row">
 {% for beachaven in paddy_photodb %}
         <figure class="col-md-4">
