--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,16 @@
     <link href="{{ url_for('static', filename='css/freelancer.min.css') }}" rel="stylesheet">
     <!--<link href="{{ url_for('static', filename='css/main.css') }}">-->
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_KZZz5GUr7LB1TlhkKGwj9");
+   })();
+</script>
+        
+    
+
+        
 </head>
 
 <body id="page-top">
@@ -126,6 +136,9 @@
     <!-- Custom scripts for this template -->
     <script src="{{ url_for('static', filename='js/freelancer.min.js') }}"></script>
 
+    <script src="{{ url_for('static', filename='js/sendEmail.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        
 </body>
 
 </html>
