Site is functioning optimally.

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,20 +127,20 @@
                                             <div class="col-lg-4 ml-auto">
                                                 <p class="lead">This website is a showcase exclusively for my
                                                     architectural/property portfolio, and to illustrate to potential clients my
-                                                    competence in this field of photography. I possess the latest Nikon equipment to
+                                                    competence in this field of photography. I possess the latest Nikon equipment to achieve excellent
 
                                                 </p>
 
                                             </div>
                                             <div class="col-lg-4 mr-auto">
                                                 <p class="lead">
-                                                    achieve excellent digital quality imagery, that compliment my compositional and
+                                                    digital quality imagery, that compliment my compositional and
                                                     lighting abilities. I have gained the experience necessary to provide clients
-                                                    with a professional and skilled body</p>
+                                                    with a professional and skilled body of images.</p>
                                             </div>
                                             <div class="col-lg-4 mr-auto">
                                                 <p class="lead">
-                                                    of images. I believe I am open and approachable and value straightforward easy
+                                                    I believe I am open and approachable and value straightforward easy
                                                     discussions with clients about their requirements in the marketplace.</p>
                                             </div>
                                         </div>
