--- a/templates/base-com.html
+++ b/templates/base-com.html
@@ -67,7 +67,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1">
-                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/">&larr; Back to Home</a>
+                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/2">&larr; Back to Commercial</a>
                         </li>
 
                     </ul>
