--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -1,122 +1,121 @@
 {% extends 'base-002.html' %}
 {% block content %}
 
-<section class="page-section about" id="commercial">
-    <div class="container">
+    <section class="page-section about" id="commercial">
+        <div class="container">
 
-        <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Testimonials</h2>
-        <!-- Icon Divider -->
-        <div class="divider-custom">
-            <div class="divider-custom-line"></div>
-           
-        </div>
-        
+            <!-- Portfolio Section Heading -->
+            <h2
+                class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Testimonials</h2>
+            <!-- Icon Divider -->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
 
-</section>
+            </div>
 
-   
+        </section>
 
-<div class="container-001">
-    <!-- About Section Content -->
+        <div class="container-001">
+            <!-- About Section Content -->
 
-    <div class="row">
+            <div class="row">
 
-   {%block head%} {%endblock%}
-   
-    <!-- Ginger2 Syntax template for Flask-->
-  </head>
-  <body>
-    {%block body%} 
-  
-  
-  <style>
-  
-  body, html {
-    margin: 0;
-    font-family: 'Quicksand', sans-serif;
-    
-}
+                {%block head%}
+                    {%endblock%}
 
-.content {
-    margin: 0 auto;
-    width: 400px;
-    
-}
+                    <!-- Ginger2 Syntax template for Flask-->
+                </head>
+                <body>
+                    {%block body%}
 
-.container-002 {
-    margin-top: 0px;
-    width: 100%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
+                        <style>
 
-table, td, th {
-    border: 1px solid #aaa;
-}
+                            body,
+                            html {
+                                margin: 0;
+                                font-family: 'Quicksand', sans-serif;
 
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
+                            }
 
-th {
-    height: 30px;
-}
+                            .content {
+                                margin: 0 auto;
+                                width: 400px;
 
-td {
-    text-align: center;
-    padding: 5px;
-}
+                            }
 
-.form {
-    margin-top: 20px;
-}
+                            .container-002 {
+                                margin-top: 0;
+                                width: 100%;
+                                text-align: center;
+                                margin-left: auto;
+                                margin-right: auto;
 
-#content {
-    width: 70%;
-}</style>
-    
-    
-<div class="container-002">
-{% if tasks|length < 1 %}
-  <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;">There are no testimonials for this job. Create one below!</h2><br>
-  {% else %}
-  <table>
-    <tr>
-      <th>Message</th>
-      <th>Added</th>
-      <th>Actions</th>
-    </tr>
-    
-    {% for task in tasks %}
+                            }
 
-    <tr>
-      <td>{{ task.content }}</td>
-      <td>{{ task.date_created.date() }}</td>
-      <td>
-        <a href="/delete/{{ task.id }}">Delete</a>
-        <br />
-        <a href="/update/{{ task.id }}">Update</a>
-      </td>
-    </tr>
-    {% endfor %}
-  </table><br><br>
-{% endif %}
-  <form action="/testimonials" method="POST">
-    <input type="text" name="content" id="content" />
-    <input type="submit" value="Add Testimonial" />
-  </form>
-</div>
-    {%endblock%}
-    <!-- Ginger2 Syntax template for Flask-->
+                            table,
+                            td,
+                            th {
+                                border: 1px solid #aaa;
+                            }
 
+                            table {
+                                border-collapse: collapse;
+                                width: 100%;
+                            }
 
-     </div>
-     <br><br>
-</div>
+                            th {
+                                height: 30px;
+                            }
 
-  
-{% endblock %}
+                            td {
+                                text-align: center;
+                                padding: 5px;
+                            }
+
+                            .form {
+                                margin-top: 20px;
+                            }
+
+                            #content {
+                                width: 70%;
+                            }
+                        </style>
+
+                        <div class="container-002">
+                            {% if tasks | length < 1 %}
+                                <h2 style="text-align: center; font-family: 'Quicksand', sans-serif;">There are no testimonials for this job. Create one below!</h2><br>
+                            {% else %}
+                                <table>
+                                    <tr>
+                                        <th>Message</th>
+                                        <th>Added</th>
+                                        <th>Actions</th>
+                                    </tr>
+
+                                    {% for task in tasks %}
+
+                                        <tr>
+                                            <td>{{ task.content }}</td>
+                                            <td>{{ task.date_created.date() }}</td>
+                                            <td>
+                                                <a href="/delete/{{ task.id }}">Delete</a>
+                                                <br/>
+                                                <a href="/update/{{ task.id }}">Update</a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                </table><br><br>
+                            {% endif %}
+                            <form action="/testimonials" method="POST">
+                                <input type="text" name="content" id="content"/>
+                                <input type="submit" value="Add Testimonial"/>
+                            </form>
+                        </div>
+                        {%endblock%}
+                        <!-- Ginger2 Syntax template for Flask-->
+
+                    </div>
+                    <br><br>
+                </div>
+
+            {% endblock %}
