--- a/templates/various.html
+++ b/templates/various.html
@@ -1,44 +1,43 @@
-{% extends 'base-002.html' %}
+{% extends 'base-com.html' %}
 {% block content %}
 
-<section class="page-section about" id="architecture">
-    <div class="container">
+    <section class="page-section about" id="architecture">
+        <div class="container">
 
-        <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Various Commercial</h2>
-        <!-- Icon Divider -->
-        <div class="divider-custom">
-            <div class="divider-custom-line"></div>
-           
-        </div>
-        
+            <!-- Portfolio Section Heading -->
+            <h2
+                class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Various Commercial</h2>
+            <!-- Icon Divider -->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
 
-</section>
-
-   
-
-<div class="container-001">
-    <!-- About Section Content -->
-
-    <div class="row">
-{% for various in paddy_photodb %}
-        <figure class="col-md-4">
-            <div id="wrapper-002"> 
-            
-            <a href="{{ various.url }}" width=400 class="hover"
-          data-responsive="true"
-          data-lightbox="mygallery"
-          data-title="{{ various.name }}">
-                    <img alt="picture" src="{{ various.url }}"
-                        class="img-fluid"></a><br><br>
-                <p class="text-002 lead">{{ various.name }}</p>
             </div>
-            
-        </figure>
-     {% endfor %}
-     </div>
-     <br><br>
-</div>
 
-  
-{% endblock %}
+        </section>
+
+        <div class="container-001">
+            <!-- About Section Content -->
+
+            <div class="row">
+                {% for various in paddy_photodb %}
+                    <figure class="col-md-4">
+                        <div id="wrapper-002">
+
+                            <a
+                                href="{{ various.url }}"
+                                width="400"
+                                class="hover"
+                                data-responsive="true"
+                                data-lightbox="mygallery"
+                                data-title="{{ various.name }}">
+                                <img alt="picture" src="{{ various.url }}" class="img-fluid"></a><br><br>
+                            <p class="text-002 lead">{{ various.name }}</p>
+                        </div>
+
+                    </figure>
+                {% endfor %}
+            </div>
+            <br><br>
+        </div>
+
+    {% endblock %}
